Fixed reddit playlist menu styling being too wide

--- a/app/assets/stylesheets/PlaylistVideo/PlaylistVideoMenu.scss
+++ b/app/assets/stylesheets/PlaylistVideo/PlaylistVideoMenu.scss
@@ -34,7 +34,7 @@
 }
 
 .pl-item-name {
-  width: 250px;
+  width: 245px;
   word-wrap: break-word;
 }
 
